# specialgifskix

./: index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: gifski-mac-arm64
src-tauri/src/: lib.rs  main.rs
