[package]
name = "specialgifskix"
version = "0.4.0"
description = "SpecialGifskiX — Batch video to GIF converter"
authors = []
edition = "2021"

[lib]
name = "specialgifskix_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
